<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	app:layout_behavior="@string/appbar_scrolling_view_behavior"
	tools:showIn="@layout/app_bar_main">


	<com.google.android.material.tabs.TabLayout
		android:id="@+id/tab_layout"
		android:layout_width="match_parent"
		android:layout_height="25dp"
		app:tabMode="auto"
		app:tabSelectedTextColor="@color/white"
		app:tabTextColor="?attr/tabTextColor" />

	<androidx.viewpager2.widget.ViewPager2
		android:id="@+id/pager"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1" />

	<!--	<androidx.fragment.app.FragmentContainerView
		android:id="@+id/main_fragment"
		android:name="org.linuxsenpai.konachan.fragment.DummyFragment"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:tag="MainFragment" />-->

</LinearLayout>
