<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:fitsSystemWindows="true"
	android:orientation="vertical"
	tools:context=".activity.MainActivity">

	<com.google.android.material.appbar.AppBarLayout
		android:id="@+id/appbar_layout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:theme="@style/AppTheme.AppBarOverlay">

		<androidx.appcompat.widget.Toolbar
			android:id="@+id/toolbar"
			android:layout_width="match_parent"
			android:layout_height="?attr/actionBarSize"
			android:background="?attr/colorPrimary"
			app:popupTheme="@style/AppTheme.PopupOverlay" />
	</com.google.android.material.appbar.AppBarLayout>

	<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
		android:id="@+id/swiperefresh"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:tag="swiperefresh"
		android:visibility="visible">

		<include
			layout="@layout/content_scrolling"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" />
	</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


</LinearLayout>
