<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/fragment_information_view"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".fragment.InformationFragment">

	<ListView
		android:id="@+id/listview"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:theme="@style/AppTheme"
		tools:listitem="@layout/item_information_view"
		tools:showIn="@layout/activity_scrolling" />
</FrameLayout>
